--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Kidney</string>
+    <string name="app_name">Kidney Health</string>
     <string name="page_title">Kidney Health</string>
     <string name="more" />
     <string name="content_description_more" />
